# ffo-bot

./: .gitignore  .pre-commit-config.yaml  .renovaterc.json5  .sops.yaml  .trivyignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  build.bat  build.sh  codecov.yml  entrypoint.sh  main.py  pyproject.toml  release-please-config.json  requirements-anonymous.txt  requirements-dev.txt  requirements.txt  setup.cfg  smoke_test.py
.github/: README.md  codecov.yml  labeler.yaml  labels.yaml  release-please-config.json  renovate.json5
.github/workflows/: auto-merge-release-please.yml  auto-merge.yml  autofix.yml  build-ci-image.yml  ci.yml  codeql.yml  daily-build.yml  docs.yml  edge.yml  label-sync.yaml  labeler.yaml  nightly.yml  promote-edge-to-main.yml  release-please.yml  release.yml  semantic-release.yml  sync-main-to-edge.yml
.pre-commit-cache/: db.db
bot/: __init__.py  client.py
bot/auth/: __init__.py  command_helpers.py  permissions.py
bot/cache/: __init__.py  memory.py
bot/commands/: admin.py  anonymous.py  convert.py  faq.py  giveaway.py  help_cmd.py  music.py  permissions.py  polls.py  privacy.py  quotebook.py  reactbot.py  reaction_roles.py  whitelist.py
bot/handlers/: __init__.py  edit_tracking.py  messages.py  moderation.py  reactions.py
bot/processors/: media_downloader.py  notifiarr_monitor.py  phrase_matcher.py  unit_converter.py  voice_transcriber.py
bot/services/: giveaway_service.py  minecraft_rcon.py  mojang.py  spotapi_probe.py  spotapi_subprocess.py  spotapi_sync.py  spotapi_worker.py  spotify.py  tidal.py  tls_client_alpine.py
bot/tasks/: giveaway_manager.py  status_rotator.py  whitelist_cache_reconcile.py
bot/utils/: __init__.py  anonymize.py  autocomplete.py  channel_config.py  collector.py  config_repair.py  cooldown.py  db.py  discord_helpers.py  discord_voice.py  edit_tracker.py  giveaway_selection.py  health.py  http_session.py  interaction.py  log_context.py  metrics.py  music.py  notifier.py  pagination.py  quotebook_channel.py  rate_limiter.py  regex_validator.py  server_config.py  server_roles.py  telemetry.py  user_preferences.py  validation.py  whitelist_cache.py  whitelist_channel.py
bot/views/: giveaway.py
config/: __init__.py  constants.py  logging_config.py  settings.py
database/: __init__.py  connection.py
database/migrations/: env.py
docs/: CHANGELOG.md  index.md  mkdocs.yml  requirements.txt
docs/changelog/: CHANGELOG.md  index.md  v2.md  v3.md  v4.md
docs/docker/: Dockerfile  docker-compose.yml
examples/docker-compose/: docker-compose.yaml
examples/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml  servicemonitor.yaml
scripts/: build.bat  build.sh  check_workflow_runners.py  entrypoint.sh  patch_tls_client_alpine.py  smoke_test.py  sops_encrypt.py  spotapi_probe.py  spotapi_worker.py
tests/: conftest.py  helpers.py
tests/integration/: conftest.py  test_admin_privacy_commands.py  test_commands_extended.py  test_database.py  test_fastapi_container.py  test_giveaway_greroll.py  test_giveaway_reroll.py  test_spotify.py  (+11 more)
(+143 files in other folders)
