[project]
name = "ffo-bot"
version = "1.3.8"
description = "High-availability Discord bot for automated reactions, media archival, and community management"
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.12"
authors = [
    {name = "MrCurlsTTV", url = "https://github.com/MrCurlsTTV"}
]
keywords = ["discord", "bot", "python", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/MrCurlsTTV/ffo-bot"
Repository = "https://github.com/MrCurlsTTV/ffo-bot"
Issues = "https://github.com/MrCurlsTTV/ffo-bot/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

