[project]
name = "ffo-bot"
version = "3.2.0"
description = "High-availability Discord bot for automated reactions, media archival, and community management"
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.12"
authors = [
    {name = "MrCurlsTTV", url = "https://github.com/MrCurlsTTV"}
]
keywords = ["discord", "bot", "python", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/MrCurlsTTV/ffo-bot"
Repository = "https://github.com/MrCurlsTTV/ffo-bot"
Issues = "https://github.com/MrCurlsTTV/ffo-bot/issues"

[project.optional-dependencies]
anonymous = [
    "spacy>=3.7.0,<4.0.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
changelog_file = "docs/CHANGELOG.md"
commit_parser = "conventional"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.edge]
match = "edge"
prerelease = true
prerelease_token = "edge"

[tool.semantic_release.changelog]
template_dir = ".github/changelog_templates"
mode = "init"
exclude_commit_patterns = [
    "chore(?:\\([^)]*\\))?: .+",
    "ci(?:\\([^)]*\\))?: .+",
    "refactor(?:\\([^)]*\\))?: .+",
    "style(?:\\([^)]*\\))?: .+",
    "test(?:\\([^)]*\\))?: .+",
    "docs(?:\\([^)]*\\))?: .+",
    "build(?:\\((?!deps\\))[^)]*\\))?: .+",
    "Initial [Cc]ommit.*",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
